--- a/templates/section-title.html
+++ b/templates/section-title.html
@@ -1,8 +1,7 @@
 <tr>
-    <td class="hl" style="padding-top: 15px !important; padding-right: 20px !important; border-collapse:collapse; border-bottom:2px solid {{ item['bg_color'] }}; padding:15px 20px">
-      <h1 style="font-size:21px; font-weight:700; line-height:23px; color:#000; margin:0; padding:0">
-        {{ item['title'] }}
-      </h1>
-    </td>
-  </tr>
-  
+  <td style="padding-top: 15px !important; padding-right: 10px !important; padding-left: 10px !important;border-collapse:collapse; border-bottom:2px solid {{ item['bg_color'] }};">
+    <span style="font-size:21px; font-weight:700; line-height:23px; color:#000; margin:0; display: inline-block; text-indent: -0.5em; padding-left: 0.5em;">
+      {{ item['title'] }}
+    </span>
+  </td>
+</tr>
