--- a/templates/static/top.html
+++ b/templates/static/top.html
@@ -1,131 +1,166 @@
-<!-- start top.html -->
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="format-detection" content="telephone=no,date=no,address=no,email=no,url=no" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
+<head>
+    
+    <!--[if gte mso 9]><xml>
+        <o:OfficeDocumentSettings>
+        <o:AllowPNG/>
+        <o:PixelsPerInch>96</o:PixelsPerInch>
+    </o:OfficeDocumentSettings>
+</xml><![endif]-->
 
-    <title>Near Future Laboratory Newsletter</title>
-
-    <style media="screen" type="text/css">
-      @media screen and (max-width:599px) {
+<!--[if gt mso 15]>
+<style type="text/css" media="all">
+    /* Outlook 2016 Height Fix */
+    table, tr, td {border-collapse: collapse;}
+    tr { font-size:0px; line-height:0px; border-collapse: collapse; }
+</style>
+<![endif]-->
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="format-detection" content="date=no">
+<meta name="format-detection" content="telephone=no">
+<meta name="robots" content="noindex">
+<title></title>
+<style media="screen" type="text/css">
+    @media screen and (max-width:599px) {
         .fr,
+        .force-row,
         .container,
         .header,
         .body,
         .footer {
-          width: 100% !important;
-          max-width: 100% !important;
+            width: 100% !important;
+            max-width: 100% !important;
         }
         .pl20 {
-          padding-left: 12px !important
+            padding-left: 12px !important
         }
         .pr20 {
-          padding-right: 12px !important
+            padding-right: 12px !important
         }
         .pl10 {
-          padding-left: 12px !important
+            padding-left: 12px !important
         }
         .pr10 {
-          padding-right: 12px !important
+            padding-right: 12px !important
         }
         .pt20 {
-          padding-top: 12px !important
+            padding-top: 12px !important
         }
         .mobt0 {
-          padding-top: 0 !important
+            padding-top: 0 !important
         }
         .mobb15 {
-          margin-bottom: 15px !important
+            margin-bottom: 15px !important
         }
         .hl {
-          padding-left: 12px !important;
-          padding-right: 12px !important;
+            padding-left: 12px !important;
+            padding-right: 12px !important;
         }
         .lg,
         h1 {
-          font-size: 18px !important;
-          line-height: 26px !important;
+            font-size: 18px !important;
+            line-height: 26px !important;
         }
         .spc {
-          padding-top: 15px !important;
+            padding-top: 15px !important;
         }
         .browser {
-          text-align: left !important;
+            text-align: left !important;
         }
-        a.spo {
-          line-height: 12px !important;
-          padding-top: 8px;
-          font-size: 10px !important;
+        a.sponsor {
+            line-height: 12px !important;
+            padding-top: 8px;
+            font-size: 10px !important;
         }
-      }
-    </style>
+    }
+</style>
 
-    <!--[if mso]>
+<!--[if mso]>
 <style type="text/css">
-body, table, td, h1, h2, h3, p {font-family: Arial, sans-serif !important;}
+    body, table, td, h1, h2, h3, p {font-family: Arial, sans-serif !important;}
 </style>
 <![endif]-->
-    <style media="screen" type="text/css">
-      .ios-footer a {
+<style media="screen" type="text/css">
+    .ios-footer a {
         color: #aaaaaa !important;
         text-decoration: underline;
-      }
-      .yshortcuts a {
+    }
+    .yshortcuts a {
         border-bottom: none !important;
-      }
-      .ExternalClass {
+    }
+    .ExternalClass {
         width: 100%;
-      }
-      .ExternalClass,
-      .ExternalClass p,
-      .ExternalClass span,
-      .ExternalClass font,
-      .ExternalClass td,
-      .ExternalClass div {
+    }
+    .ExternalClass,
+    .ExternalClass p,
+    .ExternalClass span,
+    .ExternalClass font,
+    .ExternalClass td,
+    .ExternalClass div {
         line-height: 100%;
-      }
-      .ReadMsgBody {
+    }
+    .ReadMsgBody {
         width: 100%;
         background-color: #ebebeb;
-      }
-      img {
+    }
+    img {
         -ms-interpolation-mode: bicubic;
-      }
-      a[href^="x-apple-data-detectors:"],
-      a[x-apple-data-detectors] {
+    }
+    a[href^="x-apple-data-detectors:"],
+    a[x-apple-data-detectors] {
         color: inherit !important;
         text-decoration: none !important;
         font-size: inherit !important;
         font-family: inherit !important;
         font-weight: inherit !important;
         line-height: inherit !important;
-      }
-    </style>
-
-    <!--[if mso]>
-    <style type="text/css">
-      body, table, td {
-        font-family: Arial, sans-serif !important;
-      }
-    </style>
-    <![endif]-->
-  </head>
-
-  <body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style='-moz-osx-font-smoothing:grayscale; -ms-text-size-adjust:100%; -webkit-font-smoothing:antialiased; -webkit-text-size-adjust:100%; font-family:"Inter, SF Pro Display", -apple-system, BlinkMacSystemFont, system-ui, "Segoe UI", sans-serif; margin:0; padding:0'>
-    <table border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" style="border-spacing:0;">
-      <tr>
-        <td align="center" valign="top" style="border-collapse:collapse;">
-          <table border="0" width="640" cellpadding="0" cellspacing="0" class="body" style="width:640px; max-width:640px;">
-            <!-- <tr>
-              <td bgcolor="#fde6c2" style="padding-top:20px;"> -->
-<!-- end top.html -->
-            <!-- content starts here -->
-
-
+    }
+</style>
+</head>
+<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" style='-moz-osx-font-smoothing:grayscale; -ms-text-size-adjust:100%; -webkit-font-smoothing:antialiased; -webkit-text-size-adjust:100%; font-family:"SF Pro Display", -apple-system, BlinkMacSystemFont, system-ui, "Segoe UI", sans-serif; margin:0; padding:0'>
+    <table border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" style="border-spacing:0; mso-table-lspace:0; mso-table-rspace:0">
+        <tr>
+            <td align="center" valign="top" bgcolor="#ffffff" style="border-collapse:collapse">
+                <table border="0" width="640" cellpadding="0" cellspacing="0" class="header mobt0" style="border-spacing:0; mso-table-lspace:0; mso-table-rspace:0; max-width:640px; width:640px; padding-top:20px">
+                    <tr>
+                        <td align="left" style="border-collapse:collapse">
+                            <!--[if mso]><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td width="35%" valign="top"><![endif]-->
+                                
+                                <!--[if mso]></td><td width="65%" valign="top"><![endif]-->
+                                    <table width="416" border="0" cellpadding="0" cellspacing="0" align="right" class="fr" style="border-spacing:0; mso-table-lspace:0; mso-table-rspace:0">
+                                        <tr>
+                                            <td class="pt20 pr20 pb5 pl10" valign="top" align="right" style="border-collapse:collapse; padding-top:20px; padding-right:20px; padding-bottom:5px; padding-left:10px">
+                                                <!-- <p class="mb5" style="color:#000; font-size:16px; font-weight:400; line-height:23px; margin:0; margin-bottom:5px; padding:0"><img src="https://nearfuturelaboratory.com/outbox/issues/2025/w19d-y25/head.jpg" width="100%" height="auto" class="img" style="-ms-interpolation-mode:bicubic; display:block; max-height:900px; max-width:416px; width:100%"></p>
+                                                <p class="mb0 mobb15" style="color:#000; font-size:16px; font-weight:400; line-height:23px; margin:0; margin-bottom:0; padding:0">Featured artist: <a href="" style="text-decoration:underline; color:#000 !important">&nbsp;</a>&nbsp;<a class="add" href="" style="text-decoration:none !important; font-weight:600; color:#838383 !important">[+]</a> </p> -->
+                                            </td>
+                                        </tr>
+                                    </table>
+                                    <!--[if mso]></td></tr></table><![endif]-->
+                                </td>
+                            </tr>
+                            <tr>
+                                <td align="center" valign="bottom" class="tighten pl20" style="border-collapse:collapse; font-size:1px; line-height:1px; padding-left:20px">
+                                  <table align="center" border="0" cellpadding="0" cellspacing="0" style="margin:0 auto; text-align:center;">
+                                    <tr>
+                                      <td>
+                                        <a href="https://nearfuturelaboratory.com" style="text-decoration:none;">
+                                          <img src="https://nearfuturelaboratory.com/images/site/logos/LaboratoryCircle_Guy_01_CircleTeal_200px.png" width="111" alt="Near Future Laboratory Logo" style="display:block; margin:0 auto;"/>
+                                        </a>
+                                      </td>
+                                    </tr>
+                                  </table>
+                                </a>
+                              </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+            <!-- MAIN CONTENT TABLE -->
+            <table align="center" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" style="border-spacing:0; mso-table-lspace:0; mso-table-rspace:0">
+                <!-- MAIN CONTENT CONTAINER  -->
+                <tr>
+                    <td align="center" valign="top" bgcolor="#FFFFFF" style="border-collapse:collapse; background-color:#FFF">
