--- a/templates/discord-callout-item.html
+++ b/templates/discord-callout-item.html
@@ -1,54 +1,61 @@
+
+<tr>
+  <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="width: 100%; max-width: 640px; border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
 <!-- start discord-callout-item.html -->
+    {% if item['image_url'] %}
+<tr>
+<td>
+<table border="0" cellpadding="0" cellspacing="0" width="100%" class="force-row">
+  <tr>
+    <td align="center" style="padding:0 10px 0 0;">
+      <a href="{{ item['page_url']}}">
+        <img src="{{ item['image_url'] }}" alt="{{ item['image_alt'] | default('') }}" style="display: block; border: 0; max-width: 100%; width: {{ item['image_width'] | default('599') }}px; border-radius: 0.8rem;">
+      </a>
+    </td>
+  </tr>
+</table>
+</td>
+</tr>
+    {% endif %}
 <tr>
   <td align="left" style="border-bottom-left-radius: {{ item['bottom_left_radius']}}; border-bottom-right-radius: {{ item['bottom_right_radius']}}; border-collapse: collapse; background-color: {{ item['background_color'] }};">
-    
-    {% if item['image_url'] %}
-    <table border="0" cellpadding="0" cellspacing="0" width="100%">
-      <tr>
-        <td align="center" style="padding:0 10px;">
-          <a href="{{ item['page_url']}}">
-            <img src="{{ item['image_url'] }}" alt="{{ item['image_alt'] | default('') }}" style="display: block; border: 0; max-width: 100%; width: {{ item['image_width'] | default('599') }}px; border-radius: 0.8rem;">
-          </a>
-        </td>
-      </tr>
-    </table>
-    {% endif %}
+<!--[if mso]>
+<table border="0" cellpadding="0" cellspacing="0" width="100%">
+<tr><td width="30%" valign="top"><![endif]-->
+<table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="180">
+  
+    <tr>
+      <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px;" valign="top">
+        <span style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: {{ item['text_color']}}; margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
+          <a href="{{ item['page_url']}}" style="text-decoration: underline;color: {{item['text_color']}} !important;">
+            {{ item['link_text'] }}
+          </a> ➜</span>
+        <p style="mso-line-height-rule: exactly;font-size: 12px;line-height: 12px;font-weight: 200;margin: 0;padding: 0 0 5px 0;color:{{ item['light_text_color']}} !important;">{{ item['user_callout']}}</p>
+      </td>
+    </tr>
+  
+</table>
 
-    <!--[if mso]>
-    <table border="0" cellpadding="0" cellspacing="0" width="100%">
-    <tr><td width="30%" valign="top"><![endif]-->
-    <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="180">
-      
-        <tr>
-          <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px;" valign="top">
-            <span style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: {{ item['text_color']}}; margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
-              <a href="{{ item['page_url']}}" style="text-decoration: underline;color: {{item['text_color']}} !important;">
-                {{ item['link_text'] }}
-              </a> ➜</span>
-            <p style="mso-line-height-rule: exactly;font-size: 12px;line-height: 12px;font-weight: 200;margin: 0;padding: 0 0 5px 0;color:{{ item['light_text_color']}} !important;">{{ item['user_callout']}}</p>
-          </td>
-        </tr>
-      
-    </table>
+<!--[if mso]></td><td width="70%" valign="top"><![endif]-->
+<table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="400">
+  
+    <tr>
+      <td style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
+        <p style="font-size: 16px;line-height: 20px;color: {{item['text_color']}};padding: 10px 10px 10px 5px; margin: 0;margin-bottom: 15px;">{{ item['main_copy']}}</p>
+      </td>
+    </tr>
+  
+</table>
 
-    <!--[if mso]></td><td width="70%" valign="top"><![endif]-->
-    <table align="right" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="400">
-      
-        <tr>
-          <td style="border-collapse: collapse;padding-top: 15px;padding-right: 20px;padding-left: 10px;" valign="top">
-            <p style="font-size: 16px;line-height: 20px;color: {{item['text_color']}};padding: 10px 10px 10px 5px; margin: 0;margin-bottom: 15px;">{{ item['main_copy']}}</p>
-          </td>
-        </tr>
-      
-    </table>
-
-    <!--[if mso]></td></tr></table><![endif]-->
+<!--[if mso]></td></tr></table><![endif]-->
   </td> <!-- This is the closing TD for the main content cell with the background color -->
-</tr> <!-- This closes the TR for the main content -->
+</tr> <!-- This closes the TR for the main copy content -->
+</table>
 
-<!-- Spacer Row - Add this section -->
+<!-- Spacer Row Adjust height and background color? -->
 <tr>
-  <td height="35" style="font-size: 15px; line-height: 15px; background-color: #FFFFFF;">&nbsp;</td> <!-- Adjust height and background as needed -->
+  <td height="35" style="font-size: 15px; line-height: 15px; background-color: #FFFFFF;">&nbsp;
+  </td>
 </tr>
 <!-- End Spacer Row -->
 
