--- a/templates/subject-line.html
+++ b/templates/subject-line.html
@@ -1,18 +1,14 @@
 <!-- SUBJECT LINE -->
-                    <!--[if mso]>
-            <table border="0" cellpadding="0" cellspacing="0" width="100%">
-            <tr><td width="50%" valign="top"><![endif]-->
-                    <table  border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="100%">
-                      
-                        <tr>
-                          <td style="border-collapse: collapse; padding-left: 10px;" valign="top">
-                            <p style="mso-line-height-rule: exactly;font-size: 21px;font-weight: 600;line-height: 23px;color: #000000;margin-bottom: 25px; padding: 0;">
-                              It was Week {{ item['week_number'] }} of {{ item['year'] }} {{ item['end_phrase']}}.
-                            </p>
-                            
-                          </td>
-                        </tr>
-                      
-                    </table>
-                  </td>
-                </tr>
+<tr>
+  <td align="center" bgcolor="#FFFFFF" style="padding: 0;">
+    <table width="640" cellpadding="0" cellspacing="0" border="0" style="width: 640px; max-width: 640px;">
+      <tr>
+        <td style="padding-left: 10px; padding-top: 20px; padding-bottom: 20px;">
+          <p style="max-width: 90vw; font-size: 21px; font-weight: 600; line-height: 23px; color: #000000; margin-bottom: 25px; padding: 0;">
+            It was Week {{ item['week_number'] }} of {{ item['year'] }} {{ item['end_phrase'] }}
+          </p>
+        </td>
+      </tr>
+    </table>
+  </td>
+</tr>
