--- a/templates/featured-essay.html
+++ b/templates/featured-essay.html
@@ -1,13 +1,15 @@
 <!-- FEATURED ESSAY START -->
 <tr>
-  <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="width: 100%; max-width: 640px; border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
-<tr>
-  <td align="left" class="pt20 pl20 pr20 pb5" style="border-collapse:collapse; padding-top:20px; padding-right:20px; padding-bottom:5px; padding-left:20px;">
-    <p class="lg serif" style="color:#000; font-size:21px; font-weight:400; line-height:30px; margin:0; margin-bottom:15px; padding:0; font-family:Georgia, serif">
-      {{ item['main_content'] }}
-    </p>
-  </td>
-</tr>
-  </table>
+  <td align="center" bgcolor="#FFFFFF" style="padding: 0;"> <!-- THIS WAS MISSING -->
+    <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="width: 100%; max-width: 640px; border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt;">
+      <tr>
+        <td align="left" class="pt20 pl20 pr20 pb5" style="border-collapse:collapse; padding-top:20px; padding-right:20px; padding-bottom:5px; padding-left:20px;">
+          <p class="lg serif" style="color:#000; font-size:21px; font-weight:400; line-height:30px; margin:0; margin-bottom:15px; padding:0; font-family:Georgia, serif">
+            {{ item['main_content'] }}
+          </p>
+        </td>
+      </tr>
+    </table>
+  </td> <!-- THIS WAS MISSING -->
 </tr>
 <!-- FEATURED ESSAY END -->
