--- a/templates/image-feature.html
+++ b/templates/image-feature.html
@@ -1,6 +1,6 @@
 <!-- start image-feature.html-->
 <tr>
-  <td style="background-color: {{ item['background_color'] }}; border-collapse: collapse; border-bottom-left-radius: {{ item['bottom_left_radius'] }}; border-bottom-right-radius: {{ item['bottom_right_radius'] }}; border-top-left-radius: {{ item['top_left_radius'] }}; border-top-right-radius: {{ item['top_right_radius'] }};">
+  <td align="center" style="background-color: {{ item['background_color'] }}; border-collapse: collapse; border-bottom-left-radius: {{ item['bottom_left_radius'] }}; border-bottom-right-radius: {{ item['bottom_right_radius'] }}; border-top-left-radius: {{ item['top_left_radius'] }}; border-top-right-radius: {{ item['top_right_radius'] }};">
 
     <table align="center" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; max-width: 640px;">
       
