--- a/templates/music-recommendations.html
+++ b/templates/music-recommendations.html
@@ -20,7 +20,7 @@
             {% for rec in item['recommendations'] %}
             <h2 style="color:#000; font-size:16px; font-weight:600; line-height:23px; margin:0; padding:0 0 5px 0;">
               <a href="{{ rec['link_url'] }}" style="text-decoration:underline; color:#000 !important;">{{ rec['title'] }}</a>
-                &nbsp;<a href="{{ rec['link_url'] }}" style="text-decoration:none !important; font-weight:600; color:#838383 !important;">{{ rec['cta_icon'] | default('[+]') }}</a>
+                &nbsp;<a href="{{ rec['link_url'] }}" style="text-decoration:none !important; font-weight:600; color:#838383 !important;">{{ item['cta_icon'] | default('[+]') }}</a>
             </h2>
             <p style="color:#84625D !important; font-size:16px; line-height:23px; margin:0 0 5px 0;">
               {{ rec['subtitle'] }}
