--- a/templates/simple-text.html
+++ b/templates/simple-text.html
@@ -5,10 +5,10 @@
       <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; max-width: 640px;">
         
           <tr>
-            <td style="border-collapse: collapse; padding: 20px 20px 20px 20px;" valign="top">
+            <td style="border-collapse: collapse; padding: 20px 20px 20px 10px;" valign="top">
               
               <!-- Dynamic HTML Text -->
-              <div style="font-family: 'Inter, sans-serif' !important; font-size: {{ item['font_size'] }}; line-height: {{ item['line_height'] }}; color: {{ item['text_color'] }};">
+              <div style="font-family: Inter, sans-serif !important; font-size: {{ item['font_size'] }}; line-height: {{ item['line_height'] }}; color: {{ item['text_color'] }};">
                 {{ item['main_html'] }}
               </div>
   
