--- a/templates/static/top.html
+++ b/templates/static/top.html
@@ -24,7 +24,7 @@
 <meta name="robots" content="noindex">
 <title></title>
 <style media="screen" type="text/css">
-    @media screen and (max-width:599px) {
+    @media screen and (max-width:649px) {
         .fr,
         .force-row,
         .container,
@@ -77,12 +77,15 @@
         }
     }
 </style>
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 <!--[if mso]>
 <style type="text/css">
     body, table, td, h1, h2, h3, p {font-family: Arial, sans-serif !important;}
 </style>
 <![endif]-->
+
 <style media="screen" type="text/css">
     .ios-footer a {
         color: #aaaaaa !important;
@@ -160,7 +163,7 @@
                 </tr>
             </table>
             <!-- MAIN CONTENT TABLE -->
-            <table align="center" border="0" width="100%" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" style="border-spacing:0; mso-table-lspace:0; mso-table-rspace:0">
+            <table align="center" border="0" width="640" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF" style="width: 100%; max-width: 640px; margin: 0 auto; border-spacing:0; mso-table-lspace:0; mso-table-rspace:0">
                 <!-- MAIN CONTENT CONTAINER  -->
                 <tr>
                     <td align="center" valign="top" bgcolor="#FFFFFF" style="border-collapse:collapse; background-color:#FFF">
