--- a/templates/discord-callout-item.html
+++ b/templates/discord-callout-item.html
@@ -8,7 +8,7 @@
 <td>
 <table border="0" cellpadding="0" cellspacing="0" width="10%" class="force-row">
   <tr>
-    <td align="center" style="padding:0 10px 0 0;">
+    <td align="center" style="padding:0 10px 0 20px;">
       <a href="{{ item['page_url']}}">
         <img src="{{ item['image_url'] }}" alt="{{ item['image_alt'] | default('') }}" style="display: block; border: 0; max-width: 100%; width: {{ item['image_width'] | default('599') }}px; border-radius: 0.8rem;">
       </a>
@@ -26,7 +26,7 @@
 <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0;mso-table-lspace: 0pt;mso-table-rspace: 0pt;" width="180">
   
     <tr>
-      <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 10px;" valign="top">
+      <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px;" valign="top">
         <span style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: {{ item['text_color']}}; margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
           <a href="{{ item['page_url']}}" style="text-decoration: underline;color: {{item['text_color']}} !important;">
             {{ item['link_text'] }}
