New template plus fixed bottom link

--- a/templates/bottom.html
+++ b/templates/bottom.html
@@ -37,7 +37,7 @@
                       <td style="text-align: center;border-collapse: collapse;padding-top: 0px;padding-right: 20px;padding-left: 20px;" valign="top">
                         <!-- <h1 class="padb15" style="mso-line-height-rule: exactly;font-family: FormaDJRVariable; font-size: 24px;font-style: normal;line-height: 23px;color: #000000;margin: 0;padding: 0;padding-bottom: 15px;">Amplify This</h1> -->
                         <p style="font-size: 18px;line-height: 20px;font-weight: 400;color: #000000;padding: 15px 5px;margin: 0;margin-bottom: 15px;border-radius: 6px; border-color:aliceblue; border: 2px;background: #f0f0f0;text-align: center;">
-                          <a href="https://nearfuturelaboratory.com/outbox/issues/2025/{{ item['html_file_name'] }}" style="text-decoration: underline;color: #000000 !important;">nearfuturelaboratory.com/outbox/issues/2025/{{item['html_file_name'] }}</a>
+                          <a href="https://nearfuturelaboratory.com/newsletters/2025/{{ item['file_root'] }}" style="text-decoration: underline;color: #000000 !important;">nearfuturelaboratory.com/outbox/issues/2025/{{item['html_file_name'] }}</a>
                         </p>
                       </td>
                     </tr>
