--- a/templates/aesthetically-pleasing.html
+++ b/templates/aesthetically-pleasing.html
@@ -1,7 +1,7 @@
 <tr>
   <td align="left" class="box-grey" style="border-collapse:collapse; background:#f2f2f2">
     <!--[if mso]><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td width="65%" valign="top"><![endif]-->
-    <table width="416" border="0" cellpadding="0" cellspacing="0" align="left" class="fr" style="border-spacing:0;">
+    <table width="416" border="0" cellpadding="0" cellspacing="0" align="center" class="fr" style="border-spacing:0;">
       <tr>
         <td valign="top" style="padding-top:20px; padding-right:10px; padding-left:20px;">
           {% for img_url in item['images'] %}
