--- a/templates/full-width-item.html
+++ b/templates/full-width-item.html
@@ -41,7 +41,7 @@
 
           <!-- Read More Link -->
           <p style="margin: 0;">
-            <a href="{{ item['read_more_link_ref'] }}" style="text-decoration: underline;">Read More ⇒</a>
+            <a href="{{ item['read_more_link_ref'] }}" style="color: black; text-decoration: underline;">Read More ⇒</a>
           </p>
 
         </td>
