--- a/templates/image-feature.html
+++ b/templates/image-feature.html
@@ -19,18 +19,18 @@
           <td style="border-collapse: collapse; padding: 15px 10px 20px 10px;" valign="top">
             
             <!-- Title -->
-            <h1 class="pb5" style="color:#000; font-size:16px; font-weight:600; line-height:23px; margin:0; mso-line-height-rule:exactly; padding:0 0 15px 0; padding-bottom:5px">
+          <p style="margin: 0 0 5px 0; font-weight: bold;">
             {{ item['title'] }}
-            </h1>
+          </p>
 
             <!-- Main Copy -->
-            <p style="margin: 0 0 15px 0; font-weight: normal; font-size: 16px; line-height: 23px;">
+            <p style="margin: 0 0 5px 0; font-weight: normal; font-size: 16px; line-height: 23px;">
               {{ item['main_copy'] }}
             </p>
 
             <!-- Read More Link -->
             <p style="margin: 0 0 15px 0; font-weight: normal; font-size: 16px; line-height: 23px;">
-              <a href="{{ item['read_more_url'] }}" style="text-decoration: underline;">{{ item['read_more_text'] }}</a> <span>⇒</span>
+              <a href="{{ item['read_more_url'] }}" style="color: black; text-decoration: underline;">{{ item['read_more_text'] }}</a> <span>⇒</span>
             </p>
 
           </td>
