--- a/templates/aesthetically-pleasing.html
+++ b/templates/aesthetically-pleasing.html
@@ -1,11 +1,11 @@
 <tr>
-  <td align="left" class="box-grey" style="border-collapse:collapse; background:#f2f2f2">
+  <td align="left" style="border-collapse:collapse; background:#fafafa">
     <!--[if mso]><table border="0" cellpadding="0" cellspacing="0" width="100%"><tr><td width="65%" valign="top"><![endif]-->
     <table width="416" border="0" cellpadding="0" cellspacing="0" align="center" class="fr" style="border-spacing:0;">
       <tr>
-        <td valign="top" style="padding-top:20px; padding-right:10px; padding-left:20px;">
+        <td valign="top" style="padding-top:20px; padding-right:10px; padding-left:10px;">
           {% for img_url in item['images'] %}
-          <p style="margin:0 0 2px 0;">
+          <p style="margin:0 0 10px 0;">
             <img src="{{ img_url }}" width="100%" height="auto" class="img" loading="lazy"
               style="-ms-interpolation-mode:bicubic; display:block; max-height:900px; max-width:416px; width:100%;">
           </p>
