--- a/templates/discord-callout-item.html
+++ b/templates/discord-callout-item.html
@@ -27,7 +27,7 @@
   
     <tr>
       <td style="border-collapse: collapse;padding-top: 15px;padding-right: 10px;padding-left: 20px;" valign="top">
-        <span style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: 600;color: {{ item['text_color']}}; margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
+        <span style="mso-line-height-rule: exactly;font-size: 16px;line-height: 23px;font-weight: bold;color: {{ item['text_color']}}; margin: 0;padding: 0 0 15px 0;padding-bottom: 5px;">
           <a href="{{ item['page_url']}}" style="text-decoration: underline;color: {{item['text_color']}} !important;">
             {{ item['link_text'] }}
           </a> ➜</span>
