--- a/templates/simple-text.html
+++ b/templates/simple-text.html
@@ -5,12 +5,12 @@
       <table align="left" border="0" cellpadding="0" cellspacing="0" class="force-row" style="border-spacing: 0; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: 100%; max-width: 640px;">
         
           <tr>
-            <td style="border-collapse: collapse; padding: 20px 20px 20px 10px;" valign="top">
+            <td align="left" class="pt20 pl20 pr20 pb5" style="border-collapse:collapse; padding-top:20px; padding-right:20px; padding-bottom:5px; padding-left:20px;">
               
               <!-- Dynamic HTML Text -->
-              <div style="font-family: Inter, sans-serif !important; font-size: {{ item['font_size'] }}; line-height: {{ item['line_height'] }}; color: {{ item['text_color'] }};">
+              <p class="lg" style="color:#000; font-weight:400; line-height:22px; margin:0; margin-bottom:15px; padding:0; font-family:sans-serif">
                 {{ item['main_html'] }}
-              </div>
+              </p>
   
             </td>
           </tr>
